Added Jetty client poc, and the beginnings of a harness to generate and control load.